Fixed Order Medicine alignment bug

--- a/src/app/medicine-delivery/medicine-delivery.component.css
+++ b/src/app/medicine-delivery/medicine-delivery.component.css
@@ -48,3 +48,6 @@
     background: #8BC34A;
     color: #ffffff;
 }
+.container {
+   text-align: left;
+}
